...
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/layout_navigation_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGrey"
            tools:context=".main.view.activity.MainActivity">

            <com.google.android.material.appbar.AppBarLayout
...
